Add release deploy preparation pipeline
